# sspdata

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: deploy.yaml  test_workflow.yaml
notebooks/: example.py
scripts/: code_quality.py
sspdata/base/: crawler.py  datasets.py  requests.py
sspdata/datasets/: feminicidio.py
tests/: test_crawler.py
